opam-version: "2.0"
maintainer: "contact@nomadic-labs.com"
authors: [ "Nomadic Labs" "Ocamlpro" ]
license: "LGPL-2.1-with-OCaml-exception"
homepage: "https://gitlab.com/nomadic-labs/resto"
bug-reports: "https://gitlab.com/nomadic-labs/resto/issues"
dev-repo: "git+https://gitlab.com/nomadic-labs/resto"
synopsis: "A minimal OCaml library for type-safe HTTP/JSON RPCs"

build: [
  [ "dune" "build" "-p" name "-j" jobs ]
]

depends: [
  "ocaml" { >= "4.07" }
  "dune" { >= "1.7" }
  "resto" {= version }
  "ocplib-json-typed" {= "0.7.1" }
  "ocplib-json-typed-bson" {= "0.7.1" }
]
