version: "dev"
opam-version: "2.0"
maintainer: "contact@nomadic-labs.com"
authors: [ "Nomadic Labs" "Ocamlpro" ]
license: "LGPL-2.1-with-OCaml-exception"
homepage: "https://gitlab.com/nomadic-labs/resto"
bug-reports: "https://gitlab.com/nomadic-labs/resto/issues"
dev-repo: "git+https://gitlab.com/nomadic-labs/resto"
synopsis: "A minimal OCaml library for type-safe HTTP/JSON RPCs"

build: [
  [ "dune" "build" "-p" name "-j" jobs ]
  [ "dune" "build" "@runtest_resto" "-j" jobs ] { with-test }
]

depends: [
  "ocaml" { >= "4.07" }
  "dune" { >= "1.7" }
  "uri" {>= "1.9.0" }
  "lwt" {with-test}
  "base-unix"{with-test}
]
