opam-version: "2.0"
maintainer: "contact@tezos.com"
authors: [ "Tezos devteam" ]
homepage: "https://www.tezos.com/"
bug-reports: "https://gitlab.com/tezos/tezos/issues"
dev-repo: "git+https://gitlab.com/tezos/tezos.git"
license: "MIT"
depends: [
  "caqti-lwt"
  "caqti-driver-sqlite3"
  "caqti-driver-postgresql"
  "dune" { >= "2.7" }
  "ezgzip"
  "octez-protocol-001-PtCJ7pwo-libs"
  "octez-protocol-002-PsYLVpVv-libs"
  "octez-protocol-003-PsddFKi3-libs"
  "octez-protocol-004-Pt24m4xi-libs"
  "octez-protocol-005-PsBabyM1-libs"
  "octez-protocol-006-PsCARTHA-libs"
  "octez-protocol-007-PsDELPH1-libs"
  "octez-protocol-008-PtEdo2Zk-libs"
  "octez-protocol-009-PsFLoren-libs"
  "octez-protocol-010-PtGRANAD-libs"
  "octez-protocol-011-PtHangz2-libs"
  "octez-protocol-012-Psithaca-libs"
  "octez-protocol-013-PtJakart-libs"
  "octez-protocol-014-PtKathma-libs"
  "octez-protocol-015-PtLimaPt-libs"
  "octez-protocol-016-PtMumbai-libs"
  "octez-protocol-017-PtNairob-libs"
  "octez-protocol-018-Proxford-libs"
  "octez-shell-libs"
  "safepass"
  "tls-lwt"
  "aches"
  "prometheus-app"
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
synopsis: "Tezos: `teztale` a delegate operations monitor"
