opam-version: "2.0"
maintainer: "contact@tezos.com"
authors: [ "Tezos devteam" ]
homepage: "https://www.tezos.com/"
bug-reports: "https://gitlab.com/tezos/tezos/issues"
dev-repo: "git+https://gitlab.com/tezos/tezos.git"
license: "MIT"
depends: [
  "dune" { >= "2.7" }
  "tls-lwt"
  "tezos-client-base-unix"
  "caqti-lwt"
  "caqti-dynload"
  "ocp-ocamlres"
]
depopts: [
  "tezos-client-001-PtCJ7pwo"
  "tezos-client-002-PsYLVpVv"
  "tezos-client-003-PsddFKi3"
  "tezos-client-004-Pt24m4xi"
  "tezos-client-005-PsBabyM1"
  "tezos-client-006-PsCARTHA"
  "tezos-client-007-PsDELPH1"
  "tezos-client-008-PtEdo2Zk"
  "tezos-client-009-PsFLoren"
  "tezos-client-010-PtGRANAD"
  "tezos-client-011-PtHangz2"
  "tezos-client-012-Psithaca"
  "tezos-client-013-PtJakart"
  "tezos-client-014-PtKathma"
  "tezos-client-015-PtLimaPt"
  "tezos-client-016-PtMumbai"
  "tezos-client-017-PtNairob"
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
synopsis: "Tezos: `teztale` a delegate operations monitor"
