(library
 (name teztale_archiver)
 (public_name teztale.archiver)
 (libraries
  sqlite3
  tezos-client-base-unix
  tezos-client-base
  teztale.lib
  (select
   Pt24m4xi_machine.ml
   from
   (tezos-client-004-Pt24m4xi -> Pt24m4xi_machine.real.ml))
  (select
   PsBabyM1_machine.ml
   from
   (tezos-client-005-PsBabyM1 -> PsBabyM1_machine.real.ml))
  (select
   PsCARTHA_machine.ml
   from
   (tezos-client-006-PsCARTHA -> PsCARTHA_machine.real.ml))
  (select
   PsDELPH1_machine.ml
   from
   (tezos-client-007-PsDELPH1 -> PsDELPH1_machine.real.ml))
  (select
   PtEdo2Zk_machine.ml
   from
   (tezos-client-008-PtEdo2Zk -> PtEdo2Zk_machine.real.ml))
  (select
   PsFLoren_machine.ml
   from
   (tezos-client-009-PsFLoren -> PsFLoren_machine.real.ml))
  (select
   PtGRANAD_machine.ml
   from
   (tezos-client-010-PtGRANAD -> PtGRANAD_machine.real.ml))
  (select
   PtHangz2_machine.ml
   from
   (tezos-client-011-PtHangz2 -> PtHangz2_machine.real.ml))
  (select
   Psithaca_machine.ml
   from
   (tezos-client-012-Psithaca -> Psithaca_machine.real.ml))
  (select
   PtJakart_machine.ml
   from
   (tezos-client-013-PtJakart -> PtJakart_machine.real.ml))
  (select
   PtKathma_machine.ml
   from
   (tezos-client-014-PtKathma -> PtKathma_machine.real.ml)))
 (modules_without_implementation archiver)
 (flags
  (:standard
	 -open Tezos_base__TzPervasives
	 -open Tezos_stdlib_unix
	 -open Tezos_shell_services
	 -open Tezos_client_base
	 -open Tezos_client_base_unix
	 -open Tezos_rpc_http_client_unix
	 -open Tezos_rpc_http
	 -open Teztale_lib)))
