opam-version: "2.0"
maintainer: "contact@nomadic-labs.com"
authors: [ "Nomadic Labs" ]
homepage: "https://gitlab.com/nomadic-labs/data-encoding"
bug-reports: "https://gitlab.com/nomadic-labs/data-encoding/issues"
dev-repo: "git+https://gitlab.com/nomadic-labs/data-encoding.git"
license: "MIT"
version: "1.0.1"
depends: [
  "ocaml" { >= "4.10" }
  "dune" { >= "3.0" }
  "ezjsonm" { >= "1.1.0" }
  "zarith" {>= "1.4"}
  "zarith_stubs_js" { >= "v0.16.1" }
  "hex" {>= "1.3.0"}
  "json-data-encoding" { = version }
  "json-data-encoding-bson" { = version }
  "alcotest" { >= "1.0.0" & with-test }
  "crowbar" { >= "0.2" & with-test }
  "ppx_expect"
  "either"
  "bigstringaf" { >= "0.6.1" }
  "ppx_hash"
  "ocamlformat" { = "0.24.1" & with-doc } # not technically a doc dep; modify when with-dev becomes available
  "odoc" { with-doc }
  "md2mld" { with-test } # not technically a test dep; modify when https://github.com/ocurrent/ocaml-ci/issues/264 is fixed
  "js_of_ocaml-compiler" { with-test }
  "conf-npm" { with-test }
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
synopsis: "Library of JSON and binary encoding combinators"
