[tool.poetry]
name = "tezos-docs"
version = "0.1.0"
description = "Tezos documentation"
authors = ["Tezos community <tezos@tezos.com>"]

readme = "README.rst"

repository = "https://gitlab.com/tezos/tezos"
homepage = "https://gitlab.com/tezos/tezos"
keywords = ["tezos"]

[tool.poetry.dependencies]
python = "~3.9"
sphinx = "*"
sphinx-rtd-theme = "0.5.2"
recommonmark = "*"
pycodestyle = "*"
pylint = "*"
black = "^20.8b1"

[tool.black]
line-length = 80
skip-string-normalization = true
