; The manifest can be run with 'dune exec manifest/main.exe' thanks to this dune file.
; But note that the Makefile still needs to be maintained, because if the manifest
; generates bad files, dune may refuse to run, and then we are stuck.

(executable (name main)
  ; Starting OCaml 5.0, str needs to be specified as a library and is not
  ; automatically added
  (libraries str)
  (flags (:standard -w @1..3@5..28@30..39@43@46..47@49..57@61..62))
)

(ocamlyacc JSON_parser)

(ocamllex JSON_lexer)
