(env
 (release
  (flags "-noassert")))

(library
 (name data_encoding)
 (public_name data-encoding)
 (js_of_ocaml)
 (libraries json-data-encoding json-data-encoding-bson zarith zarith_stubs_js
   ezjsonm either)
 (flags (:standard)))

(documentation
 (mld_files tutorial))

(rule
 (targets tutorial.mld)
 (deps tutorial.md)
 (action
  (with-stdout-to
   %{targets}
   (run md2mld %{deps}))))
